[package]
name = "gateway-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
lettre = "0.10.1"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]